--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -13,5 +13,7 @@
   "storage": {
     "rules": "storage.rules"
   },
-  "remoteconfig": {}
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
+  }
 }
